Fix signature verifying